--- a/www/roze.html
+++ b/www/roze.html
@@ -90,7 +90,14 @@
 		
 		
 <style>
-
+ul.big_list li {
+    width: 100%;
+    float: right;
+    height: 30px;
+    line-height: 30px;
+    border-bottom: 1px solid white;
+    cursor: pointer;
+}
 
 </style>
 <!--footer-bg-center.png-->
