--- a/www/index.html
+++ b/www/index.html
@@ -72,9 +72,8 @@
 				else
 				{
 					//downloadPath = "/android_asset/www/" + "/download.mp3";
-					downloadPath = entry.fullPath;
+					//downloadPath = entry.fullPath;
 					alert(JSON.stringify(entry));
-					//downloadPath = "cdvfile://localhost/persistent/" + "/download.mp3";
 				}
 				var media = new Media(downloadPath, null, function(e) { alert(JSON.stringify(e));});
 				media.play();
