--- a/www/index.html
+++ b/www/index.html
@@ -6,78 +6,76 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
         <title>FileTransfer Test</title>
 		<script src="js/jquery-1.11.3.min.js"></script>
+		<script src="js/jquery.md5.js"></script>
 		<script src="phonegap.js"></script>
 <script>
-	var buttomDom;
-	var statusDom;
-	var fileSystem;
-	
+
 	function init() {
 		$('#status').html("Start");
+		//alert($.md5 (" String str  d"));
 		document.addEventListener("deviceready", onDeviceReady, false);
 	}
 	
 	function onDeviceReady() {
-	  
-		//step one is to request a file system	
-		window.requestFileSystem(LocalFileSystem.TEMPORARY, 0, 
-			function(fs) {
-				fileSystem = fs;
-				//alert("1:" + fileSystem.root.fullPath);
-				buttonDom = document.querySelector('#startDl');
-				buttonDom.addEventListener('touchend', startDl, false);
-				buttonDom.removeAttribute("disabled");
-		
-			}, function(e) {
-				alert('failed to get fs');
-				alert(JSON.stringify(e));
-			});
+		if(window.localStorage.getItem('downloaded_files') == null){
+			window.localStorage.setItem('downloaded_files',JSON.stringify(["786","110"]));	
+		}
+		if(window.localStorage.getItem('download_address') == null){
+			var fileSystem;
+			window.requestFileSystem(LocalFileSystem.TEMPORARY, 0, 
+				function(fs) {
+					fileSystem = fs;
+				}, function(e) {
+					alert('failed to get fs');
+					alert(JSON.stringify(e));
+				}
+			);		
+			var download_address = fileSystem.root.toURL() + "/";
+			if ( device.platform == 'iOS' ){//Android,iOS,win7=WinCE,win8=Win32NT
+				downloadPath = "cdvfile://localhost/persistent/";
+			}
+			window.localStorage.setItem('download_address',downloadPath);
+		}
+
 	}
 
-	function startDl() {
-		buttonDom.setAttribute("disabled","disabled");
-		
-		var ft = new FileTransfer();
-		var uri = encodeURI("http://archive.org/download/Kansas_Joe_Memphis_Minnie-When_Levee_Breaks/Kansas_Joe_and_Memphis_Minnie-When_the_Levee_Breaks.mp3");
-		
-		var downloadPath = fileSystem.root.fullPath + "/download.mp3";
-		downloadPath = fileSystem.root.toURL() + "/download.mp3";
-		
-		if ( device.platform == 'iOS' ){//Android,iOS,win7=WinCE,win8=Win32NT
-			//downloadPath = "/android_asset/www/" + "/download.mp3";
-			downloadPath = "cdvfile://localhost/persistent/" + "/download.mp3";
+	
+	
+	
+	
+	function check_download(URL) {
+		var temp_array = JSON.parse(window.localStorage.getItem('downloaded_files'));
+		if($.inArray($.md5(URL),temp_array) != -1)
+		{
+			return true;
 		}
+		else
+		{
+			return false;
+		}
+	}
+	
+	function start_download(URL,Extension) {
+		var FileTransfer = new FileTransfer();
+		var uri = encodeURI(URL);
+		downloadPath = window.localStorage.getItem('download_address') + $.md5(URL) + "." + Extension;
 		
-		ft.onprogress = function(progressEvent) {
+		FileTransfer.onprogress = function(progressEvent) {
 			if (progressEvent.lengthComputable) {
 				var perc = Math.floor(progressEvent.loaded / progressEvent.total * 100);
 				$('#status').html(perc + "% loaded...");
 			} else {
-				//if(statusDom.innerHTML == "") {
-				//	$('#status').html("Loading");
-				//} else {
-					$('#status').html($('#status').html() + ".");
-				//}
+				$('#status').html($('#status').html() + ".");
 			}
 		};
 							
-		ft.download(uri, downloadPath, 
+		FileTransfer.download(uri, downloadPath, 
 			function(entry) {	
 				$('#status').html("done");
-
-				if ( device.platform == 'iOS' ){//Android,iOS,win7=WinCE,win8=Win32NT
-					//downloadPath = "/android_asset/www/" + "/download.mp3";
-					downloadPath = "cdvfile://localhost/persistent/" + "/download.mp3";
-				}
-				else
-				{
-					//downloadPath = "/android_asset/www/" + "/download.mp3";
-					//downloadPath = entry.fullPath;
-					alert(JSON.stringify(entry));
-				}
-				var media = new Media(downloadPath, null, function(e) { alert(JSON.stringify(e));});
-				media.play();
-
+				
+				temp_array = JSON.parse(window.localStorage.getItem('downloaded_files'));
+				temp_array.push($.md5(URL));
+				window.localStorage.setItem('downloaded_files',JSON.stringify(temp_array));			
 			}, 
 			function(error) {
 				alert('Crap something went wrong...');	
@@ -85,9 +83,22 @@
 			},
 			true
 		);
-			
-		
 	}
+	
+	function play_or_download(URL,Extension) {
+		downloadPath = window.localStorage.getItem('download_address') + $.md5(URL) + "." + Extension;
+		if(check_download(URL))
+		{
+			var media = new Media(downloadPath, null, function(e) { alert(JSON.stringify(e));});
+			media.play();
+		}
+		else
+		{
+			start_download(URL,Extension);
+		}
+	}
+	
+	
 </script>
     </head>
 	<body onload="init();" >
@@ -99,7 +110,7 @@
 
 			
             <p>
-            <button id="startDl" disabled>Click to Download and Play</button>
+            <button id="startDl" onclick="play_or_download('http://dlsmgroup.ir/temp/salameee.mp3,'mp3');" >Click to Download and Play</button>
             </p>
         </div>
 		
