--- a/www/map.html
+++ b/www/map.html
@@ -330,6 +330,57 @@ L.marker([31.99969789780743,44.33634475707925], {icon: console_icon}).bindPopup(
 L.marker([32.60835727605914,44.02948021388499], {icon: console_icon}).bindPopup('کنسولگری جمهوری اسلامی ایران').addTo(console);//karbala
 ////////////////////////////////////////////////////////////////////////////////////////////////		
 ////////////////////////////////////////////////////////////////////////////////////////////////
+//سید جواد///////////////////////////////////////////////////////////////////////////////////
+//درمانی
+L.marker([32.095100755,44.32180651], {icon: darmani_icon}).bindPopup('موکب مختار ثقفی').addTo(darmani);
+L.marker([32.15117209,44.32204485], {icon: darmani_icon}).bindPopup('موکب فاطمه الزهرا').addTo(darmani); //202
+L.marker([32.1642528,44.31721268], {icon: darmani_icon}).bindPopup('حج و زیارت').addTo(darmani); //228
+L.marker([32.18816688,44.30900232], {icon: darmani_icon}).bindPopup('موکب موکب امام رضا ').addTo(darmani); //285
+L.marker([32.25171654,44.28727554], {icon: darmani_icon}).bindPopup('').addTo(darmani); //431
+L.marker([32.34500242,44.24412089], {icon: darmani_icon}).bindPopup('موکب بسیج شهرداری تهران').addTo(darmani); //657
+L.marker([32.35640047,44.23550036], {icon: darmani_icon}).bindPopup('حج و زیارت').addTo(darmani); //692
+L.marker([32.36425214,44.22984769], {icon: darmani_icon}).bindPopup('حج و زیارت').addTo(darmani); //712
+L.marker([32.39742109,44.20613394], {icon: darmani_icon}).bindPopup('').addTo(darmani); //795
+L.marker([32.43400466,44.17997067], {icon: darmani_icon}).bindPopup('حج و زیارت').addTo(darmani); //890
+L.marker([32.489819,44.14609605], {icon: darmani_icon}).bindPopup('موکب شباب المنتظر').addTo(darmani); //1027
+L.marker([32.52648538,44.11361659], {icon: darmani_icon}).bindPopup('موکب خدام الحسین').addTo(darmani); //1120
+L.marker([32.56815115,44.0544717], {icon: darmani_icon}).bindPopup('').addTo(darmani); //1293
+
+
+
+//موکب ایرانی
+L.marker([32.095100755,44.32180651], {icon: mukeb_irani_icon}).bindPopup('موکب مختار ثقفی').addTo(mukeb_irani);
+L.marker([32.15117209,44.32204485], {icon: darmani_icon}).bindPopup('موکب فاطمه الزهرا').addTo(darmani); //202
+L.marker([32.1642528,44.31721268], {icon: darmani_icon}).bindPopup('حج و زیارت').addTo(darmani); //228
+L.marker([32.18816688,44.30900232], {icon: darmani_icon}).bindPopup('موکب موکب امام رضا ').addTo(darmani); //285
+L.marker([32.18816688,44.30900232], {icon: darmani_icon}).bindPopup('موکب جابر بن عبدالله').addTo(darmani); //286
+L.marker([32.1950076,44.30660983], {icon: darmani_icon}).bindPopup('موکب دارالصدیقه الشهیده').addTo(darmani); //298
+L.marker([32.23855779,44.29175952], {icon: darmani_icon}).bindPopup('موکب ستاد بازسازی عتبات').addTo(darmani); //402
+L.marker([32.23855779,44.29175952], {icon: darmani_icon}).bindPopup('موکب احباب الرضا').addTo(darmani); //403
+L.marker([32.25171654,44.28727554], {icon: darmani_icon}).bindPopup('').addTo(darmani); //431
+L.marker([32.2561198,44.28575976], {icon: darmani_icon}).bindPopup('موکب شباب النجف الاشرف').addTo(darmani); //439
+L.marker([32.34330874,44.24587171], {icon: darmani_icon}).bindPopup('موکب هانی بن عروه').addTo(darmani); //655
+L.marker([32.34500242,44.24412089], {icon: darmani_icon}).bindPopup('موکب بسیج شهرداری تهران').addTo(darmani); //657
+L.marker([32.35640047,44.23550036], {icon: darmani_icon}).bindPopup('موکب حج و زیارت').addTo(darmani); //692
+L.marker([32.36425214,44.22984769], {icon: darmani_icon}).bindPopup('موکب حج و زیارت').addTo(darmani); //712
+L.marker([32.37389933,44.22304766], {icon: darmani_icon}).bindPopup('موکب بسیج شهرداری تهران').addTo(darmani); //728
+L.marker([32.37677686,44.22090975], {icon: darmani_icon}).bindPopup('موکب رایه الثقافی').addTo(darmani); //741
+L.marker([32.37965439,44.21877184], {icon: darmani_icon}).bindPopup('موکب هیئت رزمندگان').addTo(darmani); //753
+L.marker([32.38196561,44.21790943], {icon: darmani_icon}).bindPopup('موکب شباب الرضوی').addTo(darmani); //757
+L.marker([32.39120205,44.21050259], {icon: darmani_icon}).bindPopup('موکب بیعت حسینی مازندران').addTo(darmani); //777
+L.marker([32.39742109,44.20613394], {icon: darmani_icon}).bindPopup('').addTo(darmani); //795
+L.marker([32.410349,44.19667496], {icon: darmani_icon}).bindPopup('موکب بسیج شهرداری تهران').addTo(darmani); //828
+L.marker([32.41424868,44.19388002], {icon: darmani_icon}).bindPopup('موکب رزمندگان').addTo(darmani); //840
+L.marker([32.43400466,44.17997067], {icon: darmani_icon}).bindPopup('موکب حج و زیارت').addTo(darmani); //890
+L.marker([32.43400466,44.17997067], {icon: darmani_icon}).bindPopup('موکب شباب قاسم').addTo(darmani); //890
+L.marker([32.43750745,44.17765374], {icon: darmani_icon}).bindPopup('موکب شباب المقاومه').addTo(darmani); //903
+L.marker([32.489819,44.14609605], {icon: darmani_icon}).bindPopup('موکب شباب المنتظر').addTo(darmani); //1027
+L.marker([32.51249313,44.12637326], {icon: darmani_icon}).bindPopup('').addTo(darmani); //1092
+L.marker([32.52648538,44.11361659], {icon: darmani_icon}).bindPopup('موکب خدام الحسین').addTo(darmani); //1120
+L.marker([32.53638261,44.10289987], {icon: darmani_icon}).bindPopup('موکب رضوان').addTo(darmani); //1162
+L.marker([32.56815115,44.0544717], {icon: darmani_icon}).bindPopup('').addTo(darmani); //1293
+////////////////////////////////////////////////////////////////////////////////////////////////		
+////////////////////////////////////////////////////////////////////////////////////////////////
 //عمود ها///////////////////////////////////////////////////////////////////////////////////
 L.marker([32.06145077,44.31901018], {icon: amud_icon}).bindPopup('عمود 1').addTo(amud);
 L.marker([32.08367882,44.32090625], {icon: amud_icon}).bindPopup('عمود 50').addTo(amud);
@@ -902,9 +953,9 @@ L.marker([32.6104754,44.03110044], {icon: hotel_icon}).bindPopup('Zoyoof Rahman'
 		"مکان های زیارتی": ziyarati,
 		//"بیمارستان ها": bimarestan,
 		"مراکز درمانی": darmani,
-		"موکب ، حسینیه": mukeb,
+		//"موکب ، حسینیه": mukeb,//0000000000000000000000000000000000000000
 		"موکب های در اختیار ایرانی ها": mukeb_irani,
-		"ایست و بازرسی": bazresi,
+		//"ایست و بازرسی": bazresi,//0000000000000000000000000000000000000000
 		"هتل ها": hotel,
 		"عمود ها": amud,
 		"حمل و نقل": transport,
