--- a/www/index.html
+++ b/www/index.html
@@ -72,13 +72,13 @@
 		console.log("start_download URL: " + URL);
 		console.log("start_download Extension: " + Extension);
 		
-		var FileTransfer = new FileTransfer();
+		var FileTransfer_OBJ = new FileTransfer();
 		var uri = encodeURI(URL);
+
 		downloadPath = window.localStorage.getItem('download_address') + $.md5(URL) + "." + Extension;
-		
 		console.log("start_download : " + downloadPath);
 		
-		FileTransfer.onprogress = function(progressEvent) {
+		FileTransfer_OBJ.onprogress = function(progressEvent) {
 			if (progressEvent.lengthComputable) {
 				var perc = Math.floor(progressEvent.loaded / progressEvent.total * 100);
 				$('#status').html(perc + "% loaded...");
@@ -87,7 +87,7 @@
 			}
 		};
 		
-		FileTransfer.download(uri, downloadPath, 
+		FileTransfer_OBJ.download(uri, downloadPath, 
 			function(entry) {	
 				$('#status').html("done");
 				console.log("start_download : done");
