--- a/www/index.html
+++ b/www/index.html
@@ -40,6 +40,7 @@
 			if (device.platform == 'iOS')
 			{
 				downloadPath = "cdvfile://localhost/persistent/";
+				window.localStorage.setItem('download_address',downloadPath);
 			}
 		}
 		
