--- a/www/ghable_safar.html
+++ b/www/ghable_safar.html
@@ -110,6 +110,13 @@
 		html{
 			background-color: #cfcfcf;
 		}
+		.slider_back_page_btn{
+			width:130px;
+			position:fixed;
+			top:0;
+			left:0;
+			z-index:9999999;
+		}
 	</style>	
 </head>
 <body onload="init();" style="background-color:#cfcfcf;text-align:center;overflow:hidden;width:100%;">
@@ -119,7 +126,6 @@
 				<div style="z-index: 1011; position: fixed; padding: 0px; margin: 0px; width: 100%; top: 28%; left: 0%; text-align: center;border: medium none;overflow:visible;" class="blockUI blockMsg blockPage"><img src="images/preloader.gif"></div>
 				<div style="z-index: 1012; position: fixed; padding: 0px; margin: 0px; width: 100%; top: 50%; left: 0%; text-align: center;border: medium none;overflow:visible;height:500px;" class="blockUI blockMsg blockPage"><img src="images/loading.png" width="70%"></div>
 			</div>
-
 <!--
 قبل سفر:
 	پیشینه
@@ -190,6 +196,9 @@
 				<a href="#" class="slidesjs-previous slidesjs-navigation"><i class="icon-chevron-left icon-large"></i></a>
 				<a href="#" class="slidesjs-next slidesjs-navigation"><i class="icon-chevron-right icon-large"></i></a>
 			</div>
+			
+			<div class="slider_back_page_btn" onclick="parent.history.back();"><img src="images/slider/back-btn.png" style="width:100%;" ></div>
+
 		</div>
 </body>
 </html>
