--- a/www/dar_safar.html
+++ b/www/dar_safar.html
@@ -159,11 +159,11 @@
 					</div>
 				</div>
 				<div class="silde_frame slide1th" >
-					<img src="images/slider/h01.jpg" style="width:100%;" onclick="window.location.href='news.html';" />
+					<img src="images/slider/h01.jpg" style="width:100%;" onclick="window.location.href='map.html';" />
 					<div class="slide_navigator">
 						<div class="slide_navigator_bg"></div>
 						<div class="slide_navigator_next slidesjs-next">نقشه <img src="images/slider/next-btn.png"></div>
-						<div class="slide_navigator_link"onclick="window.location.href='news.html';">اخبار مرز</div>
+						<div class="slide_navigator_link"onclick="window.location.href='map.html';">اخبار مرز</div>
 						<div class="slide_navigator_previous slidesjs-previous">مومنانه <img src="images/slider/previous-btn.png"></div>
 					</div>
 				</div>
