--- a/www/index.html
+++ b/www/index.html
@@ -311,21 +311,29 @@ body{
 	width:100%;
 	height:12%;
 	left:0%;
-	top:52%;
+	top:53%;
 }
 .btn2{
 	position:absolute;
 	width:100%;
 	height:12%;
 	left:0%;
-	top:68%;
+	top:70%;
 }
-.btn3{
-	position:absolute;
-	width:100%;
-	height:12%;
-	left:0%;
-	top:84%;
+img.lan_en.language {
+    position: fixed;
+    left: 0;
+    top: 0;
+    z-index: 999;
+    width: 70px;
+    cursor: pointer;
+}
+#container00{
+  -webkit-filter: blur(15px);
+  -moz-filter: blur(15px);
+  -o-filter: blur(15px);
+  -ms-filter: blur(15px);
+  filter: blur(15px);
 }
 </style>
 <script>
@@ -344,11 +352,11 @@ $(document).ready(function() {
 				<div style="z-index: 1011; position: fixed; padding: 0px; margin: 0px; width: 100%; top: 28%; left: 0%; text-align: center;border: medium none;overflow:visible;" class="blockUI blockMsg blockPage"><img src="images/preloader2.gif"></div>
 				<div style="z-index: 1012; position: fixed; padding: 0px; margin: 0px; width: 100%; top: 50%; left: 0%; text-align: center;border: medium none;overflow:visible;height:500px;" class="blockUI blockMsg blockPage"><img src="images/loading2.png" width="70%"></div>
 			</div>
+			<img src="images/lan_en.png" class="lan_en language" >
 			<div id="index_menu">
 				<img src="images/index.png" id="index_bg">
 				<div class="btn btn1" onclick="window.location.href='ghable_safar.html';" ></div>
 				<div class="btn btn2" onclick="window.location.href='dar_safar.html';" ></div>
-				<div class="btn btn3" onclick="loadURL('http://khamenei.ir');"></div>
 			</div>
 		</div>
 </body>
