--- a/www/dar_safar.html
+++ b/www/dar_safar.html
@@ -21,9 +21,22 @@
     <script src="js/jquery.slides.min.js"></script>
 	
 	<script>
+		function isHighDensity(){
+			return ((window.matchMedia && (window.matchMedia('only screen and (min-resolution: 124dpi), only screen and (min-resolution: 1.3dppx), only screen and (min-resolution: 48.8dpcm)').matches || window.matchMedia('only screen and (-webkit-min-device-pixel-ratio: 1.3), only screen and (-o-min-device-pixel-ratio: 2.6/2), only screen and (min--moz-device-pixel-ratio: 1.3), only screen and (min-device-pixel-ratio: 1.3)').matches)) || (window.devicePixelRatio && window.devicePixelRatio > 1.3));
+		}
+		function isRetina(){
+			return ((window.matchMedia && (window.matchMedia('only screen and (min-resolution: 192dpi), only screen and (min-resolution: 2dppx), only screen and (min-resolution: 75.6dpcm)').matches || window.matchMedia('only screen and (-webkit-min-device-pixel-ratio: 2), only screen and (-o-min-device-pixel-ratio: 2/1), only screen and (min--moz-device-pixel-ratio: 2), only screen and (min-device-pixel-ratio: 2)').matches)) || (window.devicePixelRatio && window.devicePixelRatio >= 2)) && /(iPad|iPhone|iPod)/g.test(navigator.userAgent);
+		}
+		
 		function init() {		
 			console.log('SMGROUP ::::::::::::::::::::::::::::::::::::    start init()');
 			document.addEventListener("deviceready", onDeviceReady, false);
+			if(isHighDensity() || isRetina())
+			{
+				$('.silde_frame_image').each( function(i) {
+					$(this).attr('src', $(this).attr('retina')		);
+				});
+			}
 			$("#slides").slidesjs({
 				width: 400,
 				//height: 400,
@@ -87,7 +100,6 @@
 			}
 
 		}
-
 		
 		function loadcompeleted() {
 			//$(".mypreload").html("");
@@ -98,6 +110,7 @@
 		
 		$(document).ready(function() {
 			$(".slide_navigator").css("top",$(window).height() - 110);
+
 		});
 	</script>	
 	<style>
@@ -149,17 +162,8 @@
 	نائب الزیاره
 -->
 			<div id="slides">
-				<div class="silde_frame slide9th" >
-					<img src="images/slider/h09.jpg" style="width:100%;" onclick="window.location.href='arabic.html';" />
-					<div class="slide_navigator">
-						<div class="slide_navigator_bg"></div>
-						<div class="slide_navigator_next slidesjs-next">اخبار مرز <img src="images/slider/next-btn.png"></div>
-						<div class="slide_navigator_link" onclick="window.location.href='arabic.html';">لغات پرکاربرد</div>
-						<div class="slide_navigator_previous slidesjs-previous">آداب و احکام <img src="images/slider/previous-btn.png"></div>
-					</div>
-				</div>
 				<div class="silde_frame slide1th" >
-					<img src="images/slider/h01.jpg" style="width:100%;" onclick="window.location.href='map.html';" />
+					<img src="images/slider/h01_l.jpg" class="silde_frame_image" retina="images/slider/h01.jpg" style="width:100%;" onclick="window.location.href='map.html';" />
 					<div class="slide_navigator">
 						<div class="slide_navigator_bg"></div>
 						<div class="slide_navigator_next slidesjs-next">نقشه <img src="images/slider/next-btn.png"></div>
@@ -168,7 +172,7 @@
 					</div>
 				</div>
 				<div class="silde_frame slide2th" >
-					<img src="images/slider/h02.jpg" style="width:100%;" onclick="window.location.href='map.html';" />
+					<img src="images/slider/h02_l.jpg" class="silde_frame_image" retina="images/slider/h02.jpg" style="width:100%;" onclick="window.location.href='map.html';" />
 					<div class="slide_navigator">
 						<div class="slide_navigator_bg"></div>
 						<div class="slide_navigator_next slidesjs-next">لغات پرکاربرد <img src="images/slider/next-btn.png"></div>
@@ -177,7 +181,7 @@
 					</div>
 				</div>
 				<div class="silde_frame slide3th" >
-					<img src="images/slider/h03.jpg" style="width:100%;" onclick="window.location.href='ziyarat.html';" />
+					<img src="images/slider/h03_l.jpg" class="silde_frame_image" retina="images/slider/h03.jpg" style="width:100%;" onclick="window.location.href='ziyarat.html';" />
 					<div class="slide_navigator">
 						<div class="slide_navigator_bg"></div>
 						<div class="slide_navigator_next slidesjs-next">روضه <img src="images/slider/next-btn.png"></div>
@@ -186,7 +190,7 @@
 					</div>
 				</div>
 				<div class="silde_frame slide4th" >
-					<img src="images/slider/h04.jpg" style="width:100%;" onclick="window.location.href='roze.html';" />
+					<img src="images/slider/h04_l.jpg" class="silde_frame_image" retina="images/slider/h04.jpg" style="width:100%;" onclick="window.location.href='roze.html';" />
 					<div class="slide_navigator">
 						<div class="slide_navigator_bg"></div>
 						<div class="slide_navigator_next slidesjs-next">بعثت خون <img src="images/slider/next-btn.png"></div>
@@ -195,7 +199,7 @@
 					</div>
 				</div>
 				<div class="silde_frame slide5th" >
-					<img src="images/slider/h05.jpg" style="width:100%;" onclick="window.location.href='besate_khun.html';" />
+					<img src="images/slider/h05_l.jpg" class="silde_frame_image" retina="images/slider/h05.jpg" style="width:100%;" onclick="window.location.href='besate_khun.html';" />
 					<div class="slide_navigator">
 						<div class="slide_navigator_bg"></div>
 						<div class="slide_navigator_next slidesjs-next">بی خواص <img src="images/slider/next-btn.png"></div>
@@ -204,7 +208,7 @@
 					</div>
 				</div>
 				<div class="silde_frame slide6th" >
-					<img src="images/slider/h06.jpg" style="width:100%;" onclick="window.location.href='bikhavas.html';" />
+					<img src="images/slider/h06_l.jpg" class="silde_frame_image" retina="images/slider/h06.jpg" style="width:100%;" onclick="window.location.href='bikhavas.html';" />
 					<div class="slide_navigator">
 						<div class="slide_navigator_bg"></div>
 						<div class="slide_navigator_next slidesjs-next">شاعرانه <img src="images/slider/next-btn.png"></div>
@@ -213,7 +217,7 @@
 					</div>
 				</div>
 				<div class="silde_frame slide7th" >
-					<img src="images/slider/h07.jpg" style="width:100%;" onclick="window.location.href='shaerane.html';" />
+					<img src="images/slider/h07_l.jpg" class="silde_frame_image" retina="images/slider/h07.jpg" style="width:100%;" onclick="window.location.href='shaerane.html';" />
 					<div class="slide_navigator">
 						<div class="slide_navigator_bg"></div>
 						<div class="slide_navigator_next slidesjs-next">حسینیه <img src="images/slider/next-btn.png"></div>
@@ -222,12 +226,21 @@
 					</div>
 				</div>
 				<div class="silde_frame slide8th" >
-					<img src="images/slider/h08.jpg" style="width:100%;" onclick="window.location.href='hoseinie.html';" />
+					<img src="images/slider/h08_l.jpg" class="silde_frame_image" retina="images/slider/h08.jpg" style="width:100%;" onclick="window.location.href='hoseinie.html';" />
 					<div class="slide_navigator">
 						<div class="slide_navigator_bg"></div>
 						<div class="slide_navigator_next slidesjs-next">مومنانه <img src="images/slider/next-btn.png"></div>
 						<div class="slide_navigator_link"  onclick="window.location.href='hoseinie.html';"  >حسینیه</div>
 						<div class="slide_navigator_previous slidesjs-previous">شاعرانه<img src="images/slider/previous-btn.png"></div>
+					</div>
+				</div>
+				<div class="silde_frame slide9th" >
+					<img src="images/slider/h09_l.jpg" class="silde_frame_image" retina="images/slider/h09.jpg" style="width:100%;" onclick="window.location.href='arabic.html';" />
+					<div class="slide_navigator">
+						<div class="slide_navigator_bg"></div>
+						<div class="slide_navigator_next slidesjs-next">اخبار مرز <img src="images/slider/next-btn.png"></div>
+						<div class="slide_navigator_link" onclick="window.location.href='arabic.html';">لغات پرکاربرد</div>
+						<div class="slide_navigator_previous slidesjs-previous">آداب و احکام <img src="images/slider/previous-btn.png"></div>
 					</div>
 				</div>
 				<a href="#" class="slidesjs-previous slidesjs-navigation"><i class="icon-chevron-left icon-large"></i></a>
