--- a/www/index.html
+++ b/www/index.html
@@ -22,8 +22,21 @@
 	<script src="PushNotification.js" type="text/javascript" ></script>
 	
 	<script>
+		function isHighDensity(){
+			return ((window.matchMedia && (window.matchMedia('only screen and (min-resolution: 124dpi), only screen and (min-resolution: 1.3dppx), only screen and (min-resolution: 48.8dpcm)').matches || window.matchMedia('only screen and (-webkit-min-device-pixel-ratio: 1.3), only screen and (-o-min-device-pixel-ratio: 2.6/2), only screen and (min--moz-device-pixel-ratio: 1.3), only screen and (min-device-pixel-ratio: 1.3)').matches)) || (window.devicePixelRatio && window.devicePixelRatio > 1.3));
+		}
+		function isRetina(){
+			return ((window.matchMedia && (window.matchMedia('only screen and (min-resolution: 192dpi), only screen and (min-resolution: 2dppx), only screen and (min-resolution: 75.6dpcm)').matches || window.matchMedia('only screen and (-webkit-min-device-pixel-ratio: 2), only screen and (-o-min-device-pixel-ratio: 2/1), only screen and (min--moz-device-pixel-ratio: 2), only screen and (min-device-pixel-ratio: 2)').matches)) || (window.devicePixelRatio && window.devicePixelRatio >= 2)) && /(iPad|iPhone|iPod)/g.test(navigator.userAgent);
+		}
+		
 		function init() {		
 			console.log('SMGROUP ::::::::::::::::::::::::::::::::::::    start init()');
+			if(isHighDensity() || isRetina())
+			{
+				$('.index_bg').each( function(i) {
+					$(this).attr('src', $(this).attr('retina')		);
+				});
+			}
 			document.addEventListener("deviceready", onDeviceReady, false);
 			$("#slides").slidesjs({
 				width: 400,
@@ -298,7 +311,7 @@ html {
 body{
 	background-color:#303030;text-align:center;overflow:hidden;width:100%;
 }
-#index_bg{
+.index_bg{
 	width:100%;
 }
 .btn{
@@ -328,21 +341,92 @@ img.lan_en.language {
     width: 70px;
     cursor: pointer;
 }
-#container00{
+#container.blur{
   -webkit-filter: blur(15px);
   -moz-filter: blur(15px);
   -o-filter: blur(15px);
   -ms-filter: blur(15px);
   filter: blur(15px);
 }
+#container {
+  transition: all 300ms ease 0s;
+}
 </style>
 <script>
 $(document).ready(function() {
-	setTimeout(function(){
-		$("#index_menu").css("margin-top",(($(window).height() - $("#index_bg").height())/2)*0.8	);
-		$(".mypreload").html("");
-	}, 300);
+	if(window.localStorage.getItem('lan') == null)
+	{
+		//change_language();
+		$("#container").addClass("blur");
+		setTimeout(function(){
+			$(".index_menu").css("margin-top",(($(window).height() - $(".index_bg").height())/2)*0.8	);
+			$(".mypreload").html("");
+			navigator.notification.confirm(
+				'', // message
+				 onConfirm,            // callback to invoke with index of button pressed
+				'لطفا زبان مورد نظر خود را انتخاب نمایید Please Select Your Language',           // title
+				['English','فارسی']         // buttonLabels
+			);
+			function onConfirm(buttonIndex) {
+				if(buttonIndex==1)
+				{
+					aplay_change_language("en");
+				}
+				else
+				{
+					aplay_change_language("fa");
+				}
+			}
+		}, 300);
+	}
+	else
+	{
+		if(window.localStorage.getItem('lan')=="en")
+		{
+			setTimeout(function(){
+				$(".index_menu").css("margin-top",(($(window).height() - $(".index_bg").height())/2)*0.8	);
+				aplay_change_language("en");
+			}, 300);
+			setTimeout(function(){
+				$(".mypreload").html("");
+			}, 600);
+		}
+		else
+		{
+			setTimeout(function(){
+				$(".index_menu").css("margin-top",(($(window).height() - $(".index_bg").height())/2)*0.8	);
+				$(".mypreload").html("");
+			}, 300);
+		}
+	}
 });
+
+function change_language(lan)
+{
+	$("#container").addClass("blur");
+	setTimeout(function(){
+		aplay_change_language(lan);
+		setTimeout(function(){
+			$("#container").removeClass("blur");
+		}, 300);
+	}, 300);
+};
+function aplay_change_language(lan)
+{
+	if(lan=="fa")
+	{
+		$("#fa").css("display","block");
+		$("#en").css("display","none");
+		window.localStorage.setItem('lan','fa');
+	}
+	if(lan=="en")
+	{
+		$("#en").css("display","block");
+		$("#fa").css("display","none");
+		window.localStorage.setItem('lan','en');
+	}
+};
+		
 </script>
 </head>
 <body onload="init();" >
@@ -352,11 +436,21 @@ $(document).ready(function() {
 				<div style="z-index: 1011; position: fixed; padding: 0px; margin: 0px; width: 100%; top: 28%; left: 0%; text-align: center;border: medium none;overflow:visible;" class="blockUI blockMsg blockPage"><img src="images/preloader2.gif"></div>
 				<div style="z-index: 1012; position: fixed; padding: 0px; margin: 0px; width: 100%; top: 50%; left: 0%; text-align: center;border: medium none;overflow:visible;height:500px;" class="blockUI blockMsg blockPage"><img src="images/loading2.png" width="70%"></div>
 			</div>
-			<img src="images/lan_en.png" class="lan_en language" >
-			<div id="index_menu">
-				<img src="images/index.png" id="index_bg">
-				<div class="btn btn1" onclick="window.location.href='ghable_safar.html';" ></div>
-				<div class="btn btn2" onclick="window.location.href='dar_safar.html';" ></div>
+			<div id="fa" >
+				<img src="images/lan_en.png" class="lan_en language" onclick="change_language('en');" >
+				<div class="index_menu">
+					<img src="images/index_l.png" retina="images/index.png" class="index_bg">
+					<div class="btn btn1" onclick="window.location.href='ghable_safar.html';" ></div>
+					<div class="btn btn2" onclick="window.location.href='dar_safar.html';" ></div>
+				</div>
+			</div>
+			<div id="en" style="display:none;">
+				<img src="images/lan_fa.png" class="lan_en language" onclick="change_language('fa');" >
+				<div class="index_menu">
+					<img src="images/index_en_l.png" retina="images/index_en.png" class="index_bg">
+					<div class="btn btn1" onclick="window.location.href='en_ghable_safar.html';" ></div>
+					<div class="btn btn2" onclick="window.location.href='en_dar_safar.html';" ></div>
+				</div>
 			</div>
 		</div>
 </body>
