--- a/www/index.html
+++ b/www/index.html
@@ -342,14 +342,14 @@ img.lan_en.language {
     cursor: pointer;
 }
 #container.blur{
-  -webkit-filter: blur(15px);
-  -moz-filter: blur(15px);
-  -o-filter: blur(15px);
-  -ms-filter: blur(15px);
-  filter: blur(15px);
+  -webkit-filter: blur(30px);
+  -moz-filter: blur(30px);
+  -o-filter: blur(30px);
+  -ms-filter: blur(30px);
+  filter: blur(30px);
 }
 #container {
-  transition: all 300ms ease 0s;
+  transition: all 700ms ease 0ms;
 }
 </style>
 <script>
@@ -364,17 +364,17 @@ $(document).ready(function() {
 			navigator.notification.confirm(
 				'', // message
 				 onConfirm,            // callback to invoke with index of button pressed
-				'لطفا زبان مورد نظر خود را انتخاب نمایید Please Select Your Language',           // title
+				'لطفا زبان مورد نظر خود را انتخاب نمایید \nPlease Select Your Language',           // title
 				['English','فارسی']         // buttonLabels
 			);
 			function onConfirm(buttonIndex) {
 				if(buttonIndex==1)
 				{
-					aplay_change_language("en");
+					change_language("en");
 				}
 				else
 				{
-					aplay_change_language("fa");
+					change_language("fa");
 				}
 			}
 		}, 300);
